K8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: insurance-project
  labels:
    name: insurance-project
    environment: production
