K8s/claim-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: claim-service-app
spec:
  selector:
    matchLabels:
      app: claim-service-app
  template:
    metadata:
      labels:
        app: claim-service-app
    spec:
      containers:
        - name: claim-service-app
          image: insurance/claim-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
---

apiVersion: v1
kind: Service
metadata:
  name: claim-service-svc
spec:
  selector:
    app: claim-service-app
  ports:
    - port: 80
      targetPort: 8084
