K8s/insurance-product-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service-app
spec:
  selector:
    matchLabels:
      app: product-service-app
  template:
    metadata:
      labels:
        app: product-service-app
    spec:
      containers:
        - name: product-service-app
          image: insurance/product-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
---

apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
spec:
  selector:
    app: product-service-app
  ports:
    - port: 80
      targetPort: 8083
