K8s/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service-app
spec:
  selector:
    matchLabels:
      app: payment-service-app
  template:
    metadata:
      labels:
        app: payment-service-app
    spec:
      containers:
        - name: payment-service-app
          image: insurance/payment-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
---

apiVersion: v1
kind: Service
metadata:
  name: payment-service-svc
spec:
  selector:
    app: payment-service-app
  ports:
    - port: 80
      targetPort: 8081
