K8s/policy-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-service-app
spec:
  selector:
    matchLabels:
      app: policy-service-app
  template:
    metadata:
      labels:
        app: policy-service-app
    spec:
      containers:
        - name: policy-service-app
          image: nikhilkorrapati/policyservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---

apiVersion: v1
kind: Service
metadata:
  name: policy-service-svc
spec:
  selector:
    app: policy-service-app
  ports:
    - port: 80
      targetPort: 8082
