K8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-app
spec:
  selector:
    matchLabels:
      app: redis-app
  template:
    metadata:
      labels:
        app: redis-app
    spec:
      containers:
        - name: redis-app
          image: redis:8.0.2
          command:
            - "redis-server"
          args:
            - "--protected-mode"
            - "no"
          ports:
            - containerPort: 6379

---

apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis-app
  ports:
    - port: 6379
      targetPort: 6379
