K8s/service-registry-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: "eureka"
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: insurance/service-registry:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761

---

apiVersion: v1
kind: Service
metadata:
  name: eureka
spec:
  clusterIP: None
  selector:
    app: eureka
  ports:
    - port: 8761
      name: eureka

---

apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
spec:
  type: NodePort
  selector:
    app: eureka
  ports:
    - port: 80
      targetPort: 8761
